src/test/resources/semantic/custom/reject/arrayReturnWrongSize.ul
void main() {
}

int[5] foo() {
    int[6] foo;
    return foo;
}
